--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
 body{
    background-color: #233140;
 }
+a{
+   text-decoration: none;
+}
+a:hover{
+   text-decoration: none;
+}
 /* Divider Style */
 .divider--light,
 .divider--dark {
@@ -123,10 +129,6 @@ body{
 }
 
 
-.course__link {
-   display: block;
-}
-
 
 /* Resume Style */
 .resume {
@@ -155,36 +157,72 @@ body{
 /* course cell style */
 .course_cell{
    width: 280px;
-   height: 220px;
+   /* height: 220px; */
    /* height: 100%; */
    display: flex;
-   flex-direction: column;
+   /* flex-direction: column-reverse; */
    align-items: center;
-   /* justify-content: center; */
-   transition: transform 1s;
-   transform-style: preserve-3d;
-   position: relative;
-   cursor:pointer;
+   justify-content: center;
+   /* transition: transform 1s; */
+   /* transform-style: preserve-3d; */
+   /* position: relative; */
+   /* cursor:pointer; */
+}
+.course__link {
+   display: flex;
+   flex-direction: column-reverse;
+   transition: .25s ease-in-out; 
+}
+.course__link:hover {
+   transform: translate(-2px,-2px);
+   transition: .25s ease-in-out; 
+   filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
 }
 .course_cell div{
    width: 280px;
    line-height: 26px;
-   text-align: center;
+   text-align: left;
+   color: #2c3e50;
    /* font-weight: bold; */
-   backface-visibility: hidden;
-   position: absolute;
+   /* backface-visibility: hidden; */
+   /* position: absolute; */
 }
-.course_cell:hover{
-   transform: rotateY( 180deg );
- }
+.course_cell div strong{
+   font-weight: 400;
+   font-size: 18px;
+   color: #233140;
+}
 .course_title{
-   height: 196px;
+   /* height: 196px; */
    width:200px;
    display: flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
-   font-size: 20px;
+   font-size: 16px;
+   padding: 16px 0;
+   border-radius: 0 0 5px 5px;
 }
+.course_logicdiagram{
+   /* width:270px; */
+   /* transform: rotateY( 180deg ); */
+   background-color: #fff;
+   border-radius: 5px 5px 0 0;
+   overflow: hidden;
+}
+.course__image {
+   width: 280px;
+   /* transform: scale(1);
+   transition: .25s ease-in-out; */
+}
+/* .course__image:hover {
+   transform: scale(0.85);
+   transition: .25s ease-in-out; 
+} */
+/* .course_title:hover .course__image{
+   transform: scale(0.85);
+   transition: .25s ease-in-out; 
+} */
 .color_bud{
    background-color: #EAEFBD;
    color: #233140;
@@ -196,27 +234,17 @@ body{
 .color_carrot{
    background-color: #EA9010;
 }
-.course_logicdiagram{
-   /* width:270px; */
-   transform: rotateY( 180deg );
-}
-.course_logicdiagram p{
-   height: 20px;
-}
-.course__image {
-   width: 280px;
-   display: block;
-}
+
 @media screen and (max-width: 991px) {
    .course_cell{
       width: 250px;
-      height: 170px;
+      /* height: 170px; */
    }
    .course_cell div{
       width: 200px;
    }
    .course_title{
-      height: 146px;
+      /* height: 146px; */
       width:200px;
    }
    .course__image {
@@ -228,6 +256,16 @@ body{
       justify-content: center;
    }
 }
+
+/* Detail Style */
+/* .fm{
+   width: 100%;
+   height: 100%;
+   position: fixed;
+   background-color: rgba(0, 0, 0, 0.7);
+   z-index: 9999;
+   display: none;
+} */
 
 /* Footer Style */
 .footer__above {
@@ -292,4 +330,91 @@ body{
    color: white;
    padding: 25px 0;
    text-align: center;
+}
+
+
+/* Detail Page */
+/* Detail-Course Style */
+.detail {
+   padding-top: 122px;
+   background-color: #fff;
+   font-size: 20px;
+   padding-bottom: 100px;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+   .detail {
+      padding-top: 184px;
+      padding-bottom: 75px;
+   }
+}
+.course-c{
+   border-bottom: #2c3e50 1px solid;
+   margin-bottom: 5rem;
+   padding-bottom: 2rem;
+}
+.course-c:last-child{
+   border-bottom: 0px;
+   margin-bottom: 0rem;
+   padding-bottom: 0rem;
+}
+.diagrambox{
+   width: 100%;
+   height: 290px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   overflow: hidden;
+   /* border: #233140 1px solid; */
+}
+.diagrambox img{
+   width: 100%;
+}
+.course-content{
+   padding: 0 20px;
+}
+.hint{
+   width: 100%;
+   height: 50px;
+   bottom:0;
+   /* position: absolute; */
+   background-color: #233140;
+   color: #fff;
+   font-size: 16px;
+   display: flex;
+   /* visibility: hidden; */
+   justify-content: center;
+   align-items: center;
+   opacity: 0;
+   transform: translateY(20px);
+   transition: .25s ease-in-out;
+}
+.hinttop{
+   width: 100%;
+   height: 30px;
+   /* margin: 0 20px; */
+   top:0;
+   /* visibility: hidden; */
+   /* position: absolute; */
+   background-color: #233140;
+   opacity: 0;
+   transform: translateY(-20px);
+   transition: .25s ease-in-out;
+}
+.diagrambox:hover .hint{
+   display: flex;
+   opacity: 1;
+   transform: translateY(-30px);
+   transition: .25s ease-in-out;
+}
+.diagrambox:hover .hinttop{
+   display: flex;
+   opacity: 1;
+   transform: translateY(30px);
+   transition: .25s ease-in-out;
 }
