--- a/css/style.css
+++ b/css/style.css
@@ -183,13 +183,12 @@ a:hover{
    line-height: 26px;
    text-align: left;
    color: #2c3e50;
-   /* font-weight: bold; */
    /* backface-visibility: hidden; */
    /* position: absolute; */
 }
 .course_cell div strong{
    font-weight: 400;
-   font-size: 18px;
+   font-size: 20px;
    color: #233140;
 }
 .course_title{
@@ -256,16 +255,6 @@ a:hover{
       justify-content: center;
    }
 }
-
-/* Detail Style */
-/* .fm{
-   width: 100%;
-   height: 100%;
-   position: fixed;
-   background-color: rgba(0, 0, 0, 0.7);
-   z-index: 9999;
-   display: none;
-} */
 
 /* Footer Style */
 .footer__above {
@@ -336,11 +325,11 @@ a:hover{
 /* Detail Page */
 /* Detail-Course Style */
 .detail {
-   padding-top: 122px;
+   padding-top: 22px;
    background-color: #fff;
    font-size: 20px;
-   padding-bottom: 100px;
-   min-height: 100vh;
+   /* padding-bottom: 100px; */
+   /* min-height: 100vh; */
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -348,73 +337,102 @@ a:hover{
 
 @media screen and (min-width: 768px) {
    .detail {
-      padding-top: 184px;
-      padding-bottom: 75px;
+      padding-top: 84px;
+      /* padding-bottom: 75px; */
    }
 }
-.course-c{
-   border-bottom: #2c3e50 1px solid;
-   margin-bottom: 5rem;
+.coursebg_light{
+   background-color: #00979c;
+   color: #fff;
+}
+.coursebg_dark{
+   background-color: #fff;
+}
+.course-container{
+   padding-top: 100px;
    padding-bottom: 2rem;
 }
-.course-c:last-child{
+.coursebg_dark:last-child .course-container{
    border-bottom: 0px;
+   padding-top: 80px;
    margin-bottom: 0rem;
-   padding-bottom: 0rem;
+   padding-bottom: 5rem;
 }
+.coursebg_light:last-child .course-container{
+   border-bottom: 0px;
+   padding-top: 80px;
+   margin-bottom: 0rem;
+   padding-bottom: 5rem;
+}
+.course-content{
+   padding: 10px 20px;
+}
+/* 邏輯圖 style */
 .diagrambox{
    width: 100%;
-   height: 290px;
+   /* height: 290px; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
-   /* border: #233140 1px solid; */
+   transition: .25s ease-in-out; 
 }
 .diagrambox img{
    width: 100%;
+   border-radius: 5px;
 }
-.course-content{
-   padding: 0 20px;
+.diagrambox_img{
+   overflow: hidden;
 }
+/* 邏輯圖跳轉影片提示 */
 .hint{
    width: 100%;
    height: 50px;
    bottom:0;
-   /* position: absolute; */
-   background-color: #233140;
+   position: relative;
+   background-color: #2c3e50;
    color: #fff;
    font-size: 16px;
    display: flex;
-   /* visibility: hidden; */
+   border-radius: 0 0 5px 5px ;
    justify-content: center;
    align-items: center;
    opacity: 0;
-   transform: translateY(20px);
+   transform: translateY(-50px);
    transition: .25s ease-in-out;
+}
+@media screen and (max-width: 992px) {
+   .hint {
+      height: 60px; 
+      font-size: 20px; 
+   }
 }
 .hinttop{
    width: 100%;
    height: 30px;
-   /* margin: 0 20px; */
    top:0;
-   /* visibility: hidden; */
-   /* position: absolute; */
-   background-color: #233140;
+   position: relative;
+   border-radius: 5px 5px 0 0;
+   /* background-color: #2c3e50; */
    opacity: 0;
-   transform: translateY(-20px);
+   /* transform: translateY(30px); */
    transition: .25s ease-in-out;
 }
 .diagrambox:hover .hint{
    display: flex;
    opacity: 1;
-   transform: translateY(-30px);
+   /* transform: translateY(-50px); */
    transition: .25s ease-in-out;
 }
-.diagrambox:hover .hinttop{
+/* .diagrambox:hover .hinttop{
    display: flex;
    opacity: 1;
    transform: translateY(30px);
    transition: .25s ease-in-out;
+} */
+.diagrambox:hover{
+   transform: translate(-2px,-2px);
+   transition: .25s ease-in-out; 
+   filter: drop-shadow(10px 10px 7px rgba(0, 0, 0, 0.5));
 }
