--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ a{
 a:hover{
    text-decoration: none;
 }
+
 /* Divider Style */
 .divider--light,
 .divider--dark {
@@ -46,214 +47,6 @@ a:hover{
 
 .nav-link:hover {
    color: #18bc9c;
-}
-
-/* Header Style */
-.header {
-   background-color: #00979c;
-   padding-top: 122px;
-   padding-bottom: 50px;
-   color: #fff;
-   font-size: 0.8rem;
-}
-
-@media screen and (min-width: 768px) {
-   .header {
-      padding-top: 184px;
-      padding-bottom: 100px;
-      font-size: 1rem;
-   }
-}
-@media screen and (min-width: 1200px) {
-   .header__image {
-      width: 400px;
-      height: 400px;
-      border-radius: 50%;
-   }
-}
-@media screen and (min-width: 768px) {
-   .header__image {
-      height: 300px;
-      width: 300px;
-      border-radius: 50%;
-   }
-}
-.header__image {
-   width: 180px;
-   height: 180px;
-   margin-bottom: 20px;
-   border-radius: 30%;
-   box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24),
-      0 1.5px 6px rgba(0, 0, 0, 0.12);
-}
-
-
-.header__title {
-   font-size: 3em;
-   text-transform: uppercase;
-   font-weight: 400;
-}
-
-.header__slogan {
-   font-size: 1.75em;
-   text-transform: uppercase;
-   margin: 0;
-}
-@media screen and (max-width: 320px) {
-   .header__title {
-      font-size: 2em;
-
-   }
-   
-   .header__slogan {
-      font-size: 1.5em;
-   }
-}
-
-/* Course Style */
-.course {
-   background-color: #fff;
-   font-size: 20px;
-   padding-top: 100px;
-   padding-bottom: 100px;
-}
-@media (max-width: 767px){
-   .course {
-      padding-top: 75px;
-      padding-bottom: 75px;
-   }
-   .resume {
-      padding-top: 75px;
-      padding-bottom: 75px;
-   }
-}
-
-
-
-/* Resume Style */
-.resume {
-   background-color: #00979c;
-   padding-top: 100px;
-   padding-bottom: 100px;
-   color: white;
-   /* height: 600px; */
-}
-
-.resume__description {
-   text-indent: 2rem;
-}
-
-.btn--lg {
-   border: solid 2px #fff;
-   padding: 1em 1.75em;
-   font-size: 1.25em;
-   border-radius: 0.4em;
-}
-
-.btn--lg:hover {
-   background-color: #fff;
-   color: #00979c;
-}
-/* course cell style */
-.course_cell{
-   width: 280px;
-   /* height: 220px; */
-   /* height: 100%; */
-   display: flex;
-   /* flex-direction: column-reverse; */
-   align-items: center;
-   justify-content: center;
-   /* transition: transform 1s; */
-   /* transform-style: preserve-3d; */
-   /* position: relative; */
-   /* cursor:pointer; */
-}
-.course__link {
-   display: flex;
-   flex-direction: column-reverse;
-   transition: .25s ease-in-out; 
-}
-.course__link:hover {
-   transform: translate(-2px,-2px);
-   transition: .25s ease-in-out; 
-   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
-}
-.course_cell div{
-   width: 280px;
-   line-height: 26px;
-   text-align: left;
-   color: #2c3e50;
-   /* backface-visibility: hidden; */
-   /* position: absolute; */
-}
-.course_cell div strong{
-   font-weight: 400;
-   font-size: 20px;
-   color: #233140;
-}
-.course_title{
-   /* height: 196px; */
-   width:200px;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   font-size: 16px;
-   padding: 16px 0;
-   border-radius: 0 0 5px 5px;
-}
-.course_logicdiagram{
-   /* width:270px; */
-   /* transform: rotateY( 180deg ); */
-   background-color: #fff;
-   border-radius: 5px 5px 0 0;
-   overflow: hidden;
-}
-.course__image {
-   width: 280px;
-   /* transform: scale(1);
-   transition: .25s ease-in-out; */
-}
-/* .course__image:hover {
-   transform: scale(0.85);
-   transition: .25s ease-in-out; 
-} */
-/* .course_title:hover .course__image{
-   transform: scale(0.85);
-   transition: .25s ease-in-out; 
-} */
-.color_bud{
-   background-color: #EAEFBD;
-   color: #233140;
-}
-.color_tea{
-   background-color: #C9E3AC;
-   color: #233140;
-}
-.color_carrot{
-   background-color: #EA9010;
-}
-
-@media screen and (max-width: 991px) {
-   .course_cell{
-      width: 250px;
-      /* height: 170px; */
-   }
-   .course_cell div{
-      width: 200px;
-   }
-   .course_title{
-      /* height: 146px; */
-      width:200px;
-   }
-   .course__image {
-      width: 200px;
-   }
-}
-@media screen and (max-width: 576px) {
-   .course_layout{
-      justify-content: center;
-   }
 }
 
 /* Footer Style */
@@ -322,6 +115,207 @@ a:hover{
 }
 
 
+
+/* Index Page */
+/* Header Style */
+.header {
+   background-color: #00979c;
+   padding-top: 122px;
+   padding-bottom: 50px;
+   color: #fff;
+   font-size: 0.8rem;
+}
+@media screen and (min-width: 768px) {
+   .header {
+      padding-top: 184px;
+      padding-bottom: 100px;
+      font-size: 1rem;
+   }
+}
+
+@media screen and (min-width: 1200px) {
+   .header__image {
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+   }
+}
+@media screen and (min-width: 768px) {
+   .header__image {
+      height: 300px;
+      width: 300px;
+      border-radius: 50%;
+   }
+}
+.header__image {
+   width: 180px;
+   height: 180px;
+   margin-bottom: 20px;
+   border-radius: 30%;
+   box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24),
+      0 1.5px 6px rgba(0, 0, 0, 0.12);
+}
+
+.header__title {
+   font-size: 3em;
+   text-transform: uppercase;
+   font-weight: 400;
+}
+
+.header__slogan {
+   font-size: 1.75em;
+   text-transform: uppercase;
+   margin: 0;
+}
+@media screen and (max-width: 320px) {
+   .header__title {
+      font-size: 2em;
+
+   }
+   .header__slogan {
+      font-size: 1.5em;
+   }
+}
+
+/* Course Style */
+.course {
+   background-color: #fff;
+   font-size: 20px;
+   padding-top: 100px;
+   padding-bottom: 100px;
+}
+@media (max-width: 767px){
+   .course {
+      padding-top: 75px;
+      padding-bottom: 75px;
+   }
+   .resume {
+      padding-top: 75px;
+      padding-bottom: 75px;
+   }
+}
+
+/* Resume Style */
+.resume {
+   background-color: #00979c;
+   padding-top: 100px;
+   padding-bottom: 100px;
+   color: white;
+   /* height: 600px; */
+}
+
+.resume__description {
+   text-indent: 2rem;
+}
+
+/* Button Style  */
+/* .btn--lg {
+   border: solid 2px #fff;
+   padding: 1em 1.75em;
+   font-size: 1.25em;
+   border-radius: 0.4em;
+} */
+
+/* .btn--lg:hover {
+   background-color: #fff;
+   color: #00979c;
+} */
+
+/* course cell style */
+.course_cell{
+   width: 280px;
+   /* height: 220px; */
+   /* height: 100%; */
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.course_cell div{
+   width: 280px;
+   line-height: 26px;
+   text-align: left;
+   color: #2c3e50;
+}
+.course_cell div strong{
+   font-weight: 400;
+   font-size: 20px;
+   color: #233140;
+}
+
+.course__link {
+   display: flex;
+   flex-direction: column-reverse;
+   transition: .3s ease-in-out; 
+}
+.course__link:hover {
+   transform: translate(-2px,-2px);
+   transition: .3s ease-in-out; 
+   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
+}
+
+.course_title{
+   /* height: 196px; */
+   width:200px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   font-size: 16px;
+   padding: 16px 0;
+   border-radius: 0 0 5px 5px;
+}
+
+.course_logicdiagram{
+   /* width:270px; */
+   background-color: #fff;
+   border-radius: 5px 5px 0 0;
+   overflow: hidden;
+}
+
+.course__image {
+   width: 280px;
+}
+
+@media screen and (max-width: 991px) {
+   .course_cell{
+      width: 250px;
+      /* height: 170px; */
+   }
+   .course_cell div{
+      width: 200px;
+   }
+   .course_title{
+      /* height: 146px; */
+      width:200px;
+   }
+   .course__image {
+      width: 200px;
+   }
+}
+@media screen and (max-width: 576px) {
+   .course_layout{
+      justify-content: center;
+   }
+}
+
+/* course cell colors */
+.color_bud{
+   background-color: #EAEFBD;
+   color: #233140;
+}
+
+.color_tea{
+   background-color: #C9E3AC;
+   color: #233140;
+}
+
+.color_carrot{
+   background-color: #EA9010;
+   color: #fff;
+}
+
+
+
 /* Detail Page */
 /* Detail-Course Style */
 .detail {
@@ -334,29 +328,16 @@ a:hover{
    flex-direction: column;
    justify-content: center;
 }
-
 @media screen and (min-width: 768px) {
    .detail {
       padding-top: 84px;
       /* padding-bottom: 75px; */
    }
 }
+
 .coursebg_light{
    background-color: #00979c;
    color: #fff;
-}
-.coursebg_dark{
-   background-color: #fff;
-}
-.course-container{
-   padding-top: 100px;
-   padding-bottom: 2rem;
-}
-.coursebg_dark:last-child .course-container{
-   border-bottom: 0px;
-   padding-top: 80px;
-   margin-bottom: 0rem;
-   padding-bottom: 5rem;
 }
 .coursebg_light:last-child .course-container{
    border-bottom: 0px;
@@ -364,10 +345,27 @@ a:hover{
    margin-bottom: 0rem;
    padding-bottom: 5rem;
 }
+
+.coursebg_dark{
+   background-color: #fff;
+}
+.coursebg_dark:last-child .course-container{
+   border-bottom: 0px;
+   padding-top: 80px;
+   margin-bottom: 0rem;
+   padding-bottom: 5rem;
+}
+
+.course-container{
+   padding-top: 100px;
+   padding-bottom: 2rem;
+}
+
 .course-content{
    padding: 10px 20px;
 }
-/* 邏輯圖 style */
+
+/* Logical Diagram Style */
 .diagrambox{
    width: 100%;
    /* height: 290px; */
@@ -376,17 +374,35 @@ a:hover{
    justify-content: center;
    align-items: center;
    overflow: hidden;
-   transition: .25s ease-in-out; 
+   transition: .3s ease-in-out; 
 }
+.diagrambox:hover{
+   transform: translate(-2px,-2px);
+   transition: .3s ease-in-out; 
+   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
+}
+.diagrambox:hover .diagrambox_hint{
+   display: flex;
+   opacity: 1;
+   /* transform: translateY(-50px); */
+   transition: .3s ease-in-out;
+}
+/* .diagrambox:hover .diagrambox_hinttop{
+   display: flex;
+   opacity: 1;
+   transform: translateY(30px);
+   transition: .25s ease-in-out;
+} */
 .diagrambox img{
    width: 100%;
    border-radius: 5px;
 }
-.diagrambox_img{
+
+.diagrambox_imgbox{
    overflow: hidden;
 }
-/* 邏輯圖跳轉影片提示 */
-.hint{
+
+.diagrambox_hint{
    width: 100%;
    height: 50px;
    bottom:0;
@@ -400,15 +416,16 @@ a:hover{
    align-items: center;
    opacity: 0;
    transform: translateY(-50px);
-   transition: .25s ease-in-out;
+   transition: .3s ease-in-out;
 }
 @media screen and (max-width: 992px) {
-   .hint {
+   .diagrambox_hint {
       height: 60px; 
       font-size: 20px; 
    }
 }
-.hinttop{
+
+.diagrambox_hinttop{
    width: 100%;
    height: 30px;
    top:0;
@@ -417,22 +434,5 @@ a:hover{
    /* background-color: #2c3e50; */
    opacity: 0;
    /* transform: translateY(30px); */
-   transition: .25s ease-in-out;
-}
-.diagrambox:hover .hint{
-   display: flex;
-   opacity: 1;
-   /* transform: translateY(-50px); */
-   transition: .25s ease-in-out;
-}
-/* .diagrambox:hover .hinttop{
-   display: flex;
-   opacity: 1;
-   transform: translateY(30px);
-   transition: .25s ease-in-out;
-} */
-.diagrambox:hover{
-   transform: translate(-2px,-2px);
-   transition: .25s ease-in-out; 
-   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
+   /* transition: .25s ease-in-out; */
 }
