--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /* Global Style */
 body{
    background-color: #233140;
+   display: grid;
+   height: 100vh;
+   grid-template-rows: auto 223px;
 }
 a{
    text-decoration: none;
@@ -50,9 +53,13 @@ a:hover{
 }
 
 /* Footer Style */
+footer{
+   height: 223px;
+}
 .footer__above {
    background-color: #2c3e50;
    color: white;
+   /* height: 146px; */
 }
 
 .footer__description {
@@ -112,6 +119,7 @@ a:hover{
    color: white;
    padding: 25px 0;
    text-align: center;
+   /* height: 77px; */
 }
 
 
@@ -323,7 +331,7 @@ a:hover{
    background-color: #fff;
    font-size: 20px;
    /* padding-bottom: 100px; */
-   /* min-height: 100vh; */
+   /* height: 100vh; */
    display: flex;
    flex-direction: column;
    justify-content: center;
