--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,14 @@ a:hover{
    color: #18bc9c;
 }
 
+/* Loading Style */
+.loading {
+   padding-top: 100px;
+   padding-bottom: 100px;
+}
+
 /* Footer Style */
-footer{
+footer {
    height: 223px;
 }
 .footer__above {
@@ -274,10 +280,10 @@ footer{
 }
 
 .course_logicdiagram{
-   /* width:270px; */
    background-color: #fff;
    border-radius: 5px 5px 0 0;
    overflow: hidden;
+   height: 176px;
 }
 
 .course__image {
@@ -295,6 +301,9 @@ footer{
    .course_title{
       /* height: 146px; */
       width:200px;
+   }
+   .course_logicdiagram{
+      height: 126px;
    }
    .course__image {
       width: 200px;
