--- a/css/style.css
+++ b/css/style.css
@@ -1,225 +1,231 @@
 /* Global Style */
-body{
-   background-color: #233140;
-   display: grid;
-   height: 100vh;
-   /* grid-template-rows: auto 223px; */
+body {
+  background-color: #233140;
+  display: grid;
+  height: 100vh;
+  /* grid-template-rows: auto 223px; */
 }
-a{
-   text-decoration: none;
+a {
+  text-decoration: none;
 }
-a:hover{
-   text-decoration: none;
+a:hover {
+  text-decoration: none;
 }
 
 /* Divider Style */
 .divider--light,
 .divider--dark {
-      width: 250px;
-      border-top: solid 5px;
+  width: 250px;
+  border-top: solid 5px;
 }
 
 .divider--light {
-      border-color: #fff;
+  border-color: #fff;
 }
 
 .divider--dark {
-      border-color: #2c3e50;
+  border-color: #2c3e50;
 }
 
 /* Nav Style */
 .nav__bg {
-   background-color: #2c3e50;
-   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0);
+  background-color: #2c3e50;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0);
 }
 
 .nav__brand {
-   color: #fff;
-   font-size: 1.8em;
-   text-transform: uppercase;
-   padding-top: 25px;
-   padding-bottom: 25px;
+  color: #fff;
+  font-size: 1.8em;
+  text-transform: uppercase;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
-.nav__brand:hover{
-   color: #18bc9c;
+.nav__brand:hover {
+  color: #18bc9c;
 }
 .nav-link {
-   padding: 10px 20px !important;
-   color: #fff
+  padding: 10px 20px !important;
+  color: #fff;
 }
 
 .nav-link:hover {
-   color: #18bc9c;
+  color: #18bc9c;
 }
 
 /* Loading Style */
 .loading {
-   padding-top: 100px;
-   padding-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 /* Footer Style */
 footer {
-   height: 223px;
+  height: 223px;
 }
 .footer__above {
-   background-color: #2c3e50;
-   color: white;
-   /* height: 146px; */
+  background-color: #2c3e50;
+  color: white;
+  /* height: 146px; */
 }
 
 .footer__description {
-   margin: 0;
-   padding: 0 30px;
-   text-align: center;
-   padding-bottom: 30px;
-   display: flex;
-   align-items: center;
-   /* justify-content: center; */
+  margin: 0;
+  padding: 0 30px;
+  text-align: center;
+  padding-bottom: 30px;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
 }
 
 .footer__list {
-   list-style: none;
-   margin: 0;
-   display: flex;
-   justify-content: center;
-   align-self: center;
+  list-style: none;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 @media screen and (min-width: 992px) {
-   .footer__description {
-         padding: 0px;
-         text-align: justify;
-   }
+  .footer__description {
+    padding: 0px;
+    text-align: justify;
+  }
 
-   .footer__list {
-      justify-content: flex-end;
-   }
+  .footer__list {
+    justify-content: flex-end;
+  }
 }
 
 .footer__item {
-   padding: 0 10px;
-   align-self: center;
+  padding: 0 10px;
+  align-self: center;
 }
 
 .footer__link {
-   color: white;
-   text-decoration: none;
-   display: inline-block;
-   width: 50px;
-   height: 50px;
-   border: 2px solid #fff;
-   border-radius: 100%;
-   text-align: center;
-   font-size: 20px;
-   line-height: 45px;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-radius: 100%;
+  text-align: center;
+  font-size: 20px;
+  line-height: 45px;
 }
 
 .footer__link:hover {
-   background-color: #fff;
-   color: #2c3e50;
+  background-color: #fff;
+  color: #2c3e50;
 }
 
 .footer__below {
-   background-color: #233140;
-   color: white;
-   padding: 25px 0;
-   text-align: center;
-   /* height: 77px; */
+  background-color: #233140;
+  color: white;
+  padding: 25px 0;
+  text-align: center;
+  /* height: 77px; */
 }
-
-
 
 /* Index Page */
 /* Header Style */
 .header {
-   background-color: #00979c;
-   padding-top: 122px;
-   padding-bottom: 50px;
-   color: #fff;
-   font-size: 0.8rem;
+  background-color: #00979c;
+  padding-top: 122px;
+  padding-bottom: 50px;
+  color: #fff;
+  font-size: 0.8rem;
 }
 @media screen and (min-width: 768px) {
-   .header {
-      padding-top: 184px;
-      padding-bottom: 100px;
-      font-size: 1rem;
-   }
+  .header {
+    padding-top: 184px;
+    padding-bottom: 100px;
+    font-size: 1rem;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-   .header__image {
-      width: 400px;
-      height: 400px;
-      border-radius: 50%;
-   }
+  .header__image {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+  }
 }
 @media screen and (min-width: 768px) {
-   .header__image {
-      height: 300px;
-      width: 300px;
-      border-radius: 50%;
-   }
+  .header__image {
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+  }
 }
 .header__image {
-   width: 180px;
-   height: 180px;
-   margin-bottom: 20px;
-   border-radius: 30%;
-   box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24),
-      0 1.5px 6px rgba(0, 0, 0, 0.12);
+  width: 180px;
+  height: 180px;
+  margin-bottom: 20px;
+  border-radius: 30%;
+  box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
 }
 
 .header__title {
-   font-size: 3em;
-   text-transform: uppercase;
-   font-weight: 500;
+  font-size: 3em;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .header__slogan {
-   font-size: 1.75em;
-   text-transform: uppercase;
-   margin: 0;
+  font-size: 1.75em;
+  text-transform: uppercase;
+  margin: 0;
 }
 @media screen and (max-width: 320px) {
-   .header__title {
-      font-size: 2em;
-
-   }
-   .header__slogan {
-      font-size: 1.5em;
-   }
+  .header__title {
+    font-size: 2em;
+  }
+  .header__slogan {
+    font-size: 1.5em;
+  }
 }
 
 /* Course Style */
 .course {
-   background-color: #fff;
-   font-size: 20px;
-   padding-top: 100px;
-   padding-bottom: 100px;
+  background-color: #fff;
+  font-size: 20px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
-@media (max-width: 767px){
-   .course {
-      padding-top: 75px;
-      padding-bottom: 75px;
-   }
-   .resume {
-      padding-top: 75px;
-      padding-bottom: 75px;
-   }
+@media (max-width: 767px) {
+  .course {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+  .resume {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+  .basic_use {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
 }
 
 /* Resume Style */
 .resume {
-   background-color: #00979c;
-   padding-top: 100px;
-   padding-bottom: 100px;
-   color: white;
-   /* height: 600px; */
+  background-color: #00979c;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  color: white;
+  /* height: 600px; */
 }
-
+.basic_use {
+  background-color: white;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  color: #233140;
+  /* height: 600px; */
+}
 .resume__description {
-   text-indent: 2rem;
+  text-indent: 2rem;
 }
 
 /* Button Style  */
@@ -236,176 +242,181 @@ footer {
 } */
 
 /* course cell style */
-.course_cell{
-   width: 280px;
-   /* height: 220px; */
-   /* height: 100%; */
-   display: flex;
-   align-items: center;
-   justify-content: center;
+.course_cell {
+  width: 280px;
+  /* height: 220px; */
+  /* height: 100%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.course_cell div{
-   width: 280px;
-   line-height: 26px;
-   text-align: left;
-   color: #2c3e50;
+.course_cell div {
+  width: 280px;
+  line-height: 26px;
+  text-align: left;
+  color: #2c3e50;
 }
-.course_cell div strong{
-   font-weight: 400;
-   font-size: 20px;
-   color: #233140;
+.course_cell div strong {
+  font-weight: 400;
+  font-size: 20px;
+  color: #233140;
 }
 
 .course__link {
-   display: flex;
-   flex-direction: column-reverse;
-   transition: .3s ease-in-out; 
+  display: flex;
+  flex-direction: column-reverse;
+  transition: 0.3s ease-in-out;
+  box-shadow: 0px 0px 5px rgba(8, 78, 69, 0.356);
 }
 .course__link:hover {
-   transform: translate(-2px,-2px);
-   transition: .3s ease-in-out; 
-   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
+  transform: translate(-2px, -2px);
+  transition: 0.3s ease-in-out;
+  filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
 }
 
-.course_title{
-   /* height: 196px; */
-   width:200px;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   font-size: 16px;
-   padding: 16px 0;
-   border-radius: 0 0 5px 5px;
+.course_title {
+  /* height: 196px; */
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  padding: 16px 0;
+  border-radius: 0 0 5px 5px;
 }
 
-.course_logicdiagram{
-   background-color: #fff;
-   border-radius: 5px 5px 0 0;
-   overflow: hidden;
-   height: 176px;
+.course_logicdiagram {
+  background-color: #fff;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  height: 176px;
 }
 
 .course__image {
-   width: 280px;
+  width: 280px;
 }
 
 @media screen and (max-width: 991px) {
-   .course_cell{
-      width: 250px;
-      /* height: 170px; */
-   }
-   .course_cell div{
-      width: 200px;
-   }
-   .course_title{
-      /* height: 146px; */
-      width:200px;
-   }
-   .course_logicdiagram{
-      height: 126px;
-   }
-   .course__image {
-      width: 200px;
-   }
+  .course_cell {
+    width: 250px;
+    /* height: 170px; */
+  }
+  .course_cell div {
+    width: 200px;
+  }
+  .course_title {
+    /* height: 146px; */
+    width: 200px;
+  }
+  .course_logicdiagram {
+    height: 126px;
+  }
+  .course__image {
+    width: 200px;
+  }
+}
+.basic_use_layout {
+  width: 100%; !important
 }
 @media screen and (max-width: 576px) {
-   .course_layout{
-      justify-content: center;
-   }
+  .course_layout {
+    justify-content: center;
+  }
+  .basic_use_layout {
+    justify-content: center;
+  }
 }
 
 /* course cell colors */
-.color_bud{
-   background-color: #EAEFBD;
-   color: #233140;
+.color_bud {
+  background-color: #eaefbd;
+  color: #233140;
 }
 
-.color_tea{
-   background-color: #C9E3AC;
-   color: #233140;
+.color_tea {
+  background-color: #c9e3ac;
+  color: #233140;
 }
 
-.color_carrot{
-   background-color: #EA9010;
-   color: #fff;
+.color_carrot {
+  background-color: #ea9010;
+  color: #fff;
 }
-
-
 
 /* Detail Page */
 /* Detail-Course Style */
-.detailBody{
-   grid-template-rows: auto 223px;
+.detailBody {
+  grid-template-rows: auto 223px;
 }
 .detail {
-   padding-top: 22px;
-   background-color: #fff;
-   font-size: 20px;
-   /* padding-bottom: 100px; */
-   /* height: 100vh; */
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
+  padding-top: 22px;
+  background-color: #fff;
+  font-size: 20px;
+  /* padding-bottom: 100px; */
+  /* height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 @media screen and (min-width: 768px) {
-   .detail {
-      padding-top: 84px;
-      /* padding-bottom: 75px; */
-   }
+  .detail {
+    padding-top: 84px;
+    /* padding-bottom: 75px; */
+  }
 }
 
-.coursebg_light{
-   background-color: #00979c;
-   color: #fff;
+.coursebg_light {
+  background-color: #00979c;
+  color: #fff;
 }
-.coursebg_light:last-child .course-container{
-   border-bottom: 0px;
-   padding-top: 80px;
-   margin-bottom: 0rem;
-   padding-bottom: 5rem;
-}
-
-.coursebg_dark{
-   background-color: #fff;
-}
-.coursebg_dark:last-child .course-container{
-   border-bottom: 0px;
-   padding-top: 80px;
-   margin-bottom: 0rem;
-   padding-bottom: 5rem;
+.coursebg_light:last-child .course-container {
+  border-bottom: 0px;
+  padding-top: 80px;
+  margin-bottom: 0rem;
+  padding-bottom: 5rem;
 }
 
-.course-container{
-   padding-top: 100px;
-   padding-bottom: 2rem;
+.coursebg_dark {
+  background-color: #fff;
+}
+.coursebg_dark:last-child .course-container {
+  border-bottom: 0px;
+  padding-top: 80px;
+  margin-bottom: 0rem;
+  padding-bottom: 5rem;
 }
 
-.course-content{
-   padding: 10px 20px;
+.course-container {
+  padding-top: 100px;
+  padding-bottom: 2rem;
+}
+
+.course-content {
+  padding: 10px 20px;
 }
 
 /* Logical Diagram Style */
-.diagrambox{
-   width: 100%;
-   /* height: 290px; */
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   overflow: hidden;
-   transition: .3s ease-in-out; 
+.diagrambox {
+  width: 100%;
+  /* height: 290px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
 }
-.diagrambox:hover{
-   transform: translate(-2px,-2px);
-   transition: .3s ease-in-out; 
-   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
+.diagrambox:hover {
+  transform: translate(-2px, -2px);
+  transition: 0.3s ease-in-out;
+  filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
 }
-.diagrambox:hover .diagrambox_hint{
-   display: flex;
-   opacity: 1;
-   /* transform: translateY(-50px); */
-   transition: .3s ease-in-out;
+.diagrambox:hover .diagrambox_hint {
+  display: flex;
+  opacity: 1;
+  /* transform: translateY(-50px); */
+  transition: 0.3s ease-in-out;
 }
 /* .diagrambox:hover .diagrambox_hinttop{
    display: flex;
@@ -413,46 +424,46 @@ footer {
    transform: translateY(30px);
    transition: .25s ease-in-out;
 } */
-.diagrambox img{
-   width: 100%;
-   border-radius: 5px;
+.diagrambox img {
+  width: 100%;
+  border-radius: 5px;
 }
 
-.diagrambox_imgbox{
-   overflow: hidden;
+.diagrambox_imgbox {
+  overflow: hidden;
 }
 
-.diagrambox_hint{
-   width: 100%;
-   height: 50px;
-   bottom:0;
-   position: relative;
-   background-color: #2c3e50;
-   color: #fff;
-   font-size: 16px;
-   display: flex;
-   border-radius: 0 0 5px 5px ;
-   justify-content: center;
-   align-items: center;
-   opacity: 0;
-   transform: translateY(-50px);
-   transition: .3s ease-in-out;
+.diagrambox_hint {
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+  position: relative;
+  background-color: #2c3e50;
+  color: #fff;
+  font-size: 16px;
+  display: flex;
+  border-radius: 0 0 5px 5px;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: translateY(-50px);
+  transition: 0.3s ease-in-out;
 }
 @media screen and (max-width: 992px) {
-   .diagrambox_hint {
-      height: 60px; 
-      font-size: 20px; 
-   }
+  .diagrambox_hint {
+    height: 60px;
+    font-size: 20px;
+  }
 }
 
-.diagrambox_hinttop{
-   width: 100%;
-   height: 30px;
-   top:0;
-   position: relative;
-   border-radius: 5px 5px 0 0;
-   /* background-color: #2c3e50; */
-   opacity: 0;
-   /* transform: translateY(30px); */
-   /* transition: .25s ease-in-out; */
+.diagrambox_hinttop {
+  width: 100%;
+  height: 30px;
+  top: 0;
+  position: relative;
+  border-radius: 5px 5px 0 0;
+  /* background-color: #2c3e50; */
+  opacity: 0;
+  /* transform: translateY(30px); */
+  /* transition: .25s ease-in-out; */
 }
