--- a/css/style.css
+++ b/css/style.css
@@ -406,12 +406,21 @@ footer {
   align-items: center;
   overflow: hidden;
   transition: 0.3s ease-in-out;
+  position: relative;
+}
+
+.diagrambox-cont{
+  position: relative;
+  /* background-color: #fff; */
 }
 .diagrambox:hover {
   transform: translate(-2px, -2px);
   transition: 0.3s ease-in-out;
   filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.5));
 }
+/* .diagrambox:first-of-type {
+ position: relative;
+} */
 .diagrambox:hover .diagrambox_hint {
   display: flex;
   opacity: 1;
